1999-11-27  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (char_width): New declaration.
        * charstrg.d (non_spacing_table_data, nonspacing_table_ind): New
          arrays.
          (char_width, CHAR-WIDTH, STRING-WIDTH): New functions.
        * stream.d (wr_ss_lpos): Call char_width instead of graphic_char_p.
          Don't assume every character increases the line position by 1.
          (write_char): Likewise.
        * io.d (pphelp_string_width): New function.
          (justify_end_eng, justify_end_weit): Use pphelp_string_width instead
          of the string's length.
        * compiler.lsp (subr-info): Add char-width and string-width.
        * describe.lsp (write-to-short-string): Use string-width instead of
          the string's length.
        * format.lsp (format-padded-string, format-justified-segments):
          Likewise.

1999-11-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (Array_type_simple_bit_vector): New macro.
          (simple_bit_vector_p, bit_vector_p): Use it.
        * spvw_typealloc.d (allocate_bit_vector): Likewise.

1999-11-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * asmi386.sh and others: Use temporary files for the sed scripts.
          GNU sed-2.05 concatenates multiple -e options to a single script
          with embedded newlines, GNU sed-3.02 does not.

1999-11-09  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * autoconf/acgeneral.m4 (AC_ARG_PROGRAM): Create `conftestsed' once
          only.

1999-11-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * pathname.d (directory_diff_ab): Set new_piece to
          (cons ':directory subdirs), not (list ':directory subdirs).

1999-11-08  Valeriy E. Ushakov <uwe@ptc.spbu.ru>

        * lispbibl.d (NEED_temp_mv_count, NEED_temp_value1): Define if
          SPARC && UNIX_NETBSD.

1999-11-10  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
